--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "name": "gbirke/serialrenamer",
     "description": "Web based renaming of TV series",
+    "autoload": {
+         "psr-4": {
+            "Birke\\Serialrenamer\\": "src/"
+        }
+    },
     "require": {
         "silex/silex": "~1.2",
          "twig/twig": ">=1.8,<2.0-dev"
