Add Flux and React.js
All libraries are installed and built with npm and browserify.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@
 
 # Composer PHAR
 /composer.phar
+
+# ignore node modules
+node_modules
+npm-debug.log
+
+# ignore compiled js library
+/web/js/app.js
