--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     },
     "require": {
         "silex/silex": "~1.2",
-         "twig/twig": ">=1.8,<2.0-dev",
-         "moinax/tvdb": "dev-zip_download"
+        "twig/twig": ">=1.8,<2.0-dev",
+        "moinax/tvdb": "dev-zip_download",
+        "vlucas/phpdotenv": "~1.1"
     },
     "repositories": [
         {
